Ported add-on support from TerraPlusPlus