@@ -77,7 +77,7 @@
                         </relocation>
                         <relocation>
                             <pattern>net.buildtheearth.terraminusminus</pattern>
-                            <shadedPattern>de.btegermany.terraplusminus.t--</shadedPattern>
+                            <shadedPattern>de.btegermany.terraplusminus.terraminusminus</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>net.daporkchop.lib</pattern>
@@ -97,6 +97,20 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>blue.lhf</groupId>
+                <artifactId>run-paper-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <configuration>
+                    <minecraftVersion>1.21.8</minecraftVersion>
+                    <acceptEula>true</acceptEula>
+                    <serverDirectory>run</serverDirectory>
+                    <jvmFlags>
+                        <flag>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:25566</flag>
+                        <flag>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</flag>
+                    </jvmFlags>
+                </configuration>
             </plugin>
         </plugins>
         <resources>
@@ -118,10 +132,39 @@
             <url>https://maven.smyler.net/releases/</url>
         </repository>
         <repository>
+            <id>smyler-snapshots</id>
+            <name>Smyler's snapshot maven repository</name>
+            <url>https://maven.smyler.net/snapshots</url>
+        </repository>
+        <repository>
             <id>dmulloy2-repo</id>
             <url>https://repo.dmulloy2.net/repository/public/</url>
         </repository>
+        <repository>
+            <id>sonatype</id>
+            <url>https://oss.sonatype.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>OpenCollab Snapshots</id>
+            <url>https://repo.opencollab.dev/snapshot/</url>
+        </repository>
+        <!--<repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>-->
+        <repository>
+            <id>Daporkchop_</id>
+            <url>https://maven.daporkchop.net/</url>
+        </repository>
     </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>kiputyttö-releases</id>
+            <name>Ilari's Project Repository</name>
+            <url>https://maven.lhf.blue/releases</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <dependencies>
         <dependency> <!-- https://repo.papermc.io/#browse/browse:maven-snapshots:io%2Fpapermc%2Fpaper%2Fpaper-api -->
@@ -151,10 +194,22 @@
             <version>2.13.2</version>
             <scope>compile</scope>
         </dependency>
-        <dependency> <!-- https://maven.smyler.net/#/releases/net/buildtheearth/terraminusminus/terraminusminus-bukkit -->
+        <!--<dependency>  https://maven.smyler.net/#/releases/net/buildtheearth/terraminusminus/terraminusminus-bukkit
             <groupId>net.buildtheearth.terraminusminus</groupId>
             <artifactId>terraminusminus-bukkit</artifactId>
             <version>2.1.1-1.21.8</version>
+            <scope>compile</scope>
+        </dependency>-->
+        <!--<dependency>
+            <groupId>com.github.DavixDevelop</groupId>
+            <artifactId>terraminusminus</artifactId>
+            <version>addon-support-mc-1-21-8-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>-->
+        <dependency> <!-- https://maven.smyler.net/#/snapshots/net/buildtheearth/terraminusminus/terraminusminus-bukkit -->
+            <groupId>net.buildtheearth.terraminusminus</groupId>
+            <artifactId>terraminusminus-bukkit</artifactId>
+            <version>experimental-davix-addon-support-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency> <!-- https://central.sonatype.com/artifact/com.google.guava/guava -->
@@ -190,6 +245,12 @@
             <artifactId>bstats-bukkit</artifactId>
             <version>3.1.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency> <!-- https://mvnrepository.com/artifact/it.unimi.dsi/fastutil -->
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>8.5.15</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
